; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_callback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"%s:%s: posting to default loop\00", align 1
@TIMER_EVENTS = common dso_local global i32 0, align 4
@TIMER_EVENT_EXPIRY = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @timer_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @TAG, align 4
  %4 = load i32, i32* @TIMER_EVENTS, align 4
  %5 = load i32, i32* @TIMER_EVENTS, align 4
  %6 = load i32, i32* @TIMER_EVENT_EXPIRY, align 4
  %7 = call i32 @get_id_string(i32 %5, i32 %6)
  %8 = call i32 @ESP_LOGI(i32 %3, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %7)
  %9 = load i32, i32* @TIMER_EVENTS, align 4
  %10 = load i32, i32* @TIMER_EVENT_EXPIRY, align 4
  %11 = load i32, i32* @portMAX_DELAY, align 4
  %12 = call i32 @esp_event_post(i32 %9, i32 %10, i32* null, i32 0, i32 %11)
  %13 = call i32 @ESP_ERROR_CHECK(i32 %12)
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, i32, i32) #1

declare dso_local i32 @get_id_string(i32, i32) #1

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_event_post(i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
